fix header alignment on tablet

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -213,11 +213,16 @@
   transform: translateY(-100%);
 }
 
+@media (min-width: 744px) {
+  .header {
+    padding: 0 32px;
+  }
+}
+
 @media (min-width: 1200px) {
   .header {
     width: 100%;
     justify-content: center;
-    padding: 0 32px;
   }
 
   .header__nav {
